chore: Update bundle identifier and remove `credentialsSource` from EAS build profiles.

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nguyentruongvu.7c2a4f42",
+      "bundleIdentifier": "com.rapou7.budtracker",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
