--- a/eas.json
+++ b/eas.json
@@ -5,16 +5,13 @@
     "build": {
         "development": {
             "developmentClient": true,
-            "distribution": "internal",
-            "credentialsSource": "local"
+            "distribution": "internal"
         },
         "preview": {
-            "distribution": "internal",
-            "credentialsSource": "local"
+            "distribution": "internal"
         },
         "production": {
-            "distribution": "internal",
-            "credentialsSource": "local"
+            "distribution": "internal"
         }
     },
     "submit": {
